# valkyrie

./: README.md  stack.yaml  valkyrie.cabal
app/: Main.hs
data/: cube_no_normals.mdl  cube_test.mdl  t.mtl  valkyrie.prog  valkyrie.ps  valkyrie.vs
src/: Valkyrie.hs
src/Valkyrie/: Binary.hs  Engine.hs  Game.hs  Input.hs  Math.hs  Render.hs  Resource.hs  Timer.hs  Types.hs  Valkyrie.hs
src/Valkyrie/Graphics/: Material.hs  Mesh.hs  Model.hs  Program.hs  Shader.hs  Util.hs
src/Valkyrie/Graphics/Material/: Types.hs
src/Valkyrie/Graphics/Mesh/: Types.hs
src/Valkyrie/Graphics/Model/: Types.hs
src/Valkyrie/Render/: Types.hs
src/Valkyrie/Resource/: File.hs  Types.hs
src/Valkyrie/Timer/: Types.hs
