name:                valkyrie
version:             0.1.0
synopsis:            Game engine
description:         Game engine
homepage:            http://github.com/Feeniks/valkyrie
license:             BSD3
license-file:        LICENSE
author:              Ralph Morton
maintainer:          ralphmorton@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Valkyrie, Valkyrie.Resource, Valkyrie.Resource.Types
  build-depends:       base >= 4.7 && < 5 
                     , mtl >= 2.2.1 
                     , lens >= 4.7.0.1 
                     , stm >= 2.4.4 
                     , bindings-DSL >= 1.0.22 
                     , bindings-GLFW >= 3.1.1.3 
                     , GLFW-b >= 1.4.7.2 
                     , OpenGLRaw >= 2.5.1.0 
                     , configurator >= 0.3.0.0 
                     , parsec >= 3.1.9 
                     , bytestring >= 0.10.6.0 
                     , containers >= 0.5.6.2 
                     , directory >= 1.2.2.0
  default-language:    Haskell2010

executable test
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base 
                     , mtl >= 2.2.1
                     , bytestring >= 0.10.6.0 
                     , valkyrie
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Feeniks/valkyrie
